@@ -1,5 +1,5 @@
 .\" t
-.\" $Id: gimpprint-models.7.in,v 1.5 2004/06/17 08:22:32 m0m Exp $
+.\" $Id: gimpprint-models.7.in,v 1.6 2004/06/30 14:33:27 m0m Exp $
 .\" Copyright (C) 2000 Roger Leigh <rleigh@debian.org>
 .\"
 .\" This program is free software; you can redistribute it and/or modify
@@ -209,9 +209,11 @@ lexmark\-z42	Lexmark Z42
 lexmark\-z43	Lexmark Z43
 lexmark\-z52	Lexmark Z52
 lexmark\-z53	Lexmark Z53
+olympus\-p10	Olympus P10
 olympus\-p300	Olympus P300
 olympus\-p400	Olympus P400
 canon\-cp100	Canon CP100
+canon\-cp220	Canon CP220
 sony\-updp10	Sony UP\-DP10
 fujifilm\-cx400	Fujifilm Printpix CX\-400
 fujifilm\-cx550	Fujifilm Printpix CX\-550
