@@ -60,6 +60,8 @@
 #gptofoo canon-cp100 printer/Canon-CP-100
 #gptofoo canon-cp100 printer/Canon-CP-200
 #gptofoo canon-cp100 printer/Canon-CP-300
+#gptofoo canon-cp220 printer/Canon-CP-220
+#gptofoo canon-cp220 printer/Canon-CP-330
 #gptofoo pcl-4 printer/Canon-GP_335
 #gptofoo pcl-3 printer/Canon-LBP-4sx
 #gptofoo pcl-4l printer/Canon-LBP-430
@@ -597,6 +599,7 @@
 #gptofoo pcl-4l printer/Okidata-Super_6e
 #gptofoo pcl-2 printer/Olivetti-JP350S
 #gptofoo pcl-2 printer/Olivetti-PG_306
+#gptofoo olympus-p10 printer/Olympus-P-10
 #gptofoo olympus-p300 printer/Olympus-P-300E
 #gptofoo olympus-p300 printer/Olympus-P-300U
 #gptofoo olympus-p300 printer/Olympus-P-330NE
