@@ -4,7 +4,7 @@
    XML description of printers known to libgimpprint
    This file was originally generated.  It should be edited by hand.
 
-   "$Id: printers.xml,v 1.99 2004/06/20 15:13:38 davehill Exp $"
+   "$Id: printers.xml,v 1.100 2004/06/30 14:33:28 m0m Exp $"
 -->
 
 <gimp-print xmlns="http://gimp-print.sourceforge.net/xsd/gp.xsd-1.0"
@@ -1305,6 +1305,9 @@
       </printer>
     </family>
     <family name="olympus">
+      <printer name="Olympus P10" driver="olympus-p10" manufacturer="Olympus">
+        <model value="2"/>
+      </printer>
       <printer name="Olympus P300" driver="olympus-p300" manufacturer="Olympus">
         <model value="0"/>
       </printer>
@@ -1313,6 +1316,9 @@
       </printer>
       <printer name="Canon CP100" driver="canon-cp100" manufacturer="Canon">
         <model value="1000"/>
+      </printer>
+      <printer name="Canon CP220" driver="canon-cp220" manufacturer="Canon">
+        <model value="1001"/>
       </printer>
       <printer name="Sony UP-DP10" driver="sony-updp10" manufacturer="Sony">
         <model value="2000"/>
