@@ -1083,6 +1083,7 @@ Canon BJC 7000
 Canon BJC 7100
 Canon BJC 8200
 Canon CP-100 series	(Experimental)
+Canon CP-220 series	(Experimental)
 Canon S400
 Canon S450
 Canon S800
@@ -1290,6 +1291,7 @@ Lexmark Z42
 Lexmark Z43
 Lexmark Z52
 Lexmark Z53
+Olympus P-10	(Experimental)
 Olympus P-300 series (Experimental)
 Olympus P-400 series (Experimental)
 Sony UP-DP10	(Experimental)
@@ -1364,6 +1366,8 @@ Canon BJC-8200                 bjc-8200        Canon BJC 8200
 Canon CP-100                   canon-cp100     Canon CP100
 Canon CP-200                   canon-cp100     Canon CP100
 Canon CP-300                   canon-cp100     Canon CP100
+Canon CP-220                   canon-cp220     Canon CP220
+Canon CP-330                   canon-cp220     Canon CP220
 Canon GP 335                   pcl-4           HP LaserJet 4 series
 Canon LBP-4sx                  pcl-3           HP LaserJet III series
 Canon LBP-430                  pcl-4l          HP LaserJet 4L
@@ -1901,6 +1905,7 @@ Okidata Okipage 14ex           pcl-4           HP LaserJet 4 series
 Okidata Super 6e               pcl-4l          HP LaserJet 4L
 Olivetti JP350S                pcl-2           HP LaserJet II series
 Olivetti PG 306                pcl-2           HP LaserJet II series
+Olympus P-10                   olympus-p10     Olympus P10 
 Olympus P-300E                 olympus-p300    Olympus P300
 Olympus P-300U                 olympus-p300    Olympus P300
 Olympus P-330NE                olympus-p300    Olympus P300
